# auto-shell

./: .gitignore  CONTRIBUTORS.md  README.md  config.yaml.example  pyproject.toml
.github/workflows/: build.yml  publish.yml
auto_shell/: cli.py  config.py  llm_client.py  server.py
plugin/: auto-shell.plugin.zsh
