[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-shell"
version = "0.1.0"
description = "终端即为聊天框 - AI 驱动的 Shell 命令生成工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "cacaview" },
]
keywords = ["shell", "ai", "zsh", "terminal", "command-line", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "openai>=1.10.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
]

[project.scripts]
auto-shell = "auto_shell.cli:main"

[project.urls]
Homepage = "https://github.com/cacaview/auto-shell"
Repository = "https://github.com/cacaview/auto-shell"
Issues = "https://github.com/cacaview/auto-shell/issues"

[tool.hatch.build.targets.wheel]
packages = ["auto_shell"]

[tool.hatch.build.targets.sdist]
include = [
    "/auto_shell",
    "/plugin",
    "/config.yaml.example",
    "/README.md",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "hatch>=1.0.0",
]
